# gen-ai-app

./: .gitignore  PROJECT_REFLECTION.md  Python Programming Language Overview.pptx  QUICKSTART.md  README.md  demo_data_flow.py  setup.bat  start.bat  test_mcp_stdio.py
backend/: .env.example  README.md  main.py  requirements.txt
backend/src/: __init__.py
backend/src/grpc_server/: __init__.py  server.py  service.py
backend/src/mcp/: __init__.py  client.py  orchestrator.py  orchestrator_v1_backup.py  orchestrator_v3.py
backend/src/models/: video_store.py
backend/src/utils/: config.py  session_manager.py  setup.py
docs/: ARCHITECTURE.md  Introduction to JavaScript and Its Applications.pptx
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/icons/: README.md
frontend/src-tauri/src/: main.rs
frontend/src/components/: ChatInterface.tsx  Header.tsx  SessionList.tsx  VideoUpload.tsx
mcp-servers/report-agent/: README.md  __init__.py  requirements.txt  server.py
mcp-servers/transcription-agent/: README.md  WHISPER_SETUP.md  __init__.py  requirements.txt  server.py  test-agent.bat  test_agent.py
mcp-servers/vision-agent/: README.md  __init__.py  requirements.txt  server.py
proto/: video_analysis.proto
scripts/: README.md  compile-proto.bat  download-models.bat  setup-all.bat  setup-backend.bat  setup-frontend.bat  setup-mcp-servers.bat  start-all.bat  start-backend.bat  start-mcp-servers.bat  verify-setup.bat
(+3 files in other folders)
