[package]
name = "video-analysis-ai"
version = "0.1.0"
description = "A fully local AI desktop application for video analysis"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
tonic-build = "0.11"

[dependencies]
tauri = { version = "1.5.4", features = [ "http-request", "fs-write-file", "fs-read-file", "fs-create-dir", "dialog-open", "fs-read-dir", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
tokio-stream = "0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
